--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -8,6 +8,6 @@ spring.data.mongodb.host=192.168.1.16
 
 # App config
 server.port=9090
-
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
 #configuration
 my-configs.maxitems = 6
