--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -11,3 +11,5 @@ server.port=9090
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
 #configuration
 my-configs.maxitems = 6
+
+spring.cloud.config.uri=http://localhost:9101/
