--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -7,7 +7,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=192.168.1.16
 
 # App config
-server.port=9090
+#server.port=9090
 eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
 #configuration
 my-configs.maxitems = 6
