--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -8,9 +8,10 @@ spring.data.mongodb.host=192.168.1.16
 
 # App config
 #server.port=9090
-#eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
+eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
+#eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
 #configuration
 my-configs.maxitems = 6
 
-spring.cloud.config.uri=http://localhost:9101/
+#spring.cloud.config.uri=http://localhost:9101/
+spring.cloud.config.uri=http://192.168.1.16:9101/
