--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -10,6 +10,7 @@ spring.data.mongodb.host=192.168.1.16
 #server.port=9090
 eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
 #eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
+eureka.instance.hostname= kiidlibrary
 #configuration
 my-configs.maxitems = 6
 
