--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -13,6 +13,7 @@ eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
 #eureka.instance.hostname= ${SERVICE_NAME}.${NAMESPACE_NAME}
 #configuration
 my-configs.maxitems = 6
+eureka.instance.prefer-ip-address=true
 
 #spring.cloud.config.uri=http://localhost:9101/
 spring.cloud.config.uri=http://192.168.1.16:9101/
