--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -6,6 +6,9 @@ spring.data.mongodb.database=kiidlibrary
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=192.168.1.16
 
+#NextCloud
+nextCloud.Ip=192.168.1.16
+
 # App config
 #server.port=9090
 #eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
