--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -8,6 +8,11 @@ spring.data.mongodb.host=192.168.1.16
 
 #NextCloud
 nextCloud.Ip=192.168.1.16
+nextCloud.port=1010
+nextCloud.user=admin
+nextCloud.pwd=admin
+nextCloud.useHttps=false
+nextCloud.kiidFolder=kiid
 
 # App config
 #server.port=9090
