--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -25,3 +25,7 @@ eureka.instance.prefer-ip-address=true
 
 spring.cloud.config.uri=http://localhost:9101/
 #spring.cloud.config.uri=http://192.168.1.16:9101/
+
+#fileUploaqd
+multipart.max-file-size=100MB
+multipart.max-request-size=100MB
