--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -26,6 +26,6 @@ eureka.instance.prefer-ip-address=true
 spring.cloud.config.uri=http://localhost:9101/
 #spring.cloud.config.uri=http://192.168.1.16:9101/
 
-#fileUploaqd
-multipart.max-file-size=100MB
-multipart.max-request-size=100MB
+#FileUpload
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
