--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -12,7 +12,7 @@ nextCloud.port=1010
 nextCloud.user=admin
 nextCloud.pwd=admin
 nextCloud.useHttps=false
-nextCloud.kiidFolder=kiid
+nextCloud.kiidFolder=kiid2
 
 # App config
 #server.port=9090
