--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -14,6 +14,9 @@ nextCloud.pwd=admin
 nextCloud.useHttps=false
 nextCloud.kiidFolder=kiid2
 
+#tesseract
+tesseract.dataPath=../KiidLibraryGlobal/KiidLibrary/src/main/resources/tessdata
+
 # App config
 #server.port=9090
 #eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
