--- a/kiidlibrary-junit.properties
+++ b/kiidlibrary-junit.properties
@@ -15,7 +15,7 @@ nextCloud.useHttps=false
 nextCloud.kiidFolder=kiid2
 
 #tesseract
-tesseract.dataPath=../KiidLibraryGlobal/KiidLibrary/src/main/elena
+tesseract.dataPath=src/test/java/com/cloud/kiidlibrary/resources/tessdata
 
 # App config
 #server.port=9090
