--- a/kiidlibrary-junit.properties
+++ b/kiidlibrary-junit.properties
@@ -19,15 +19,15 @@ tesseract.dataPath=src/test/java/com/cloud/kiidlibrary/resources/tessdata
 
 # App config
 #server.port=9090
-#eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
+eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
+#eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
 #eureka.instance.hostname= ${SERVICE_NAME}.${NAMESPACE_NAME}
 #configuration
 my-configs.maxitems = 6
 eureka.instance.prefer-ip-address=true
 
-spring.cloud.config.uri=http://localhost:9101/
-#spring.cloud.config.uri=http://192.168.1.16:9101/
+#spring.cloud.config.uri=http://localhost:9101/
+spring.cloud.config.uri=http://192.168.1.16:9101/
 
 #FileUpload
 spring.servlet.multipart.max-file-size=150MB
