--- a/kiidlibrary-junit.properties
+++ b/kiidlibrary-junit.properties
@@ -32,3 +32,6 @@ spring.cloud.config.uri=http://192.168.1.16:9101/
 #FileUpload
 spring.servlet.multipart.max-file-size=150MB
 spring.servlet.multipart.max-request-size=150MB
+
+#LOGGING
+logging.level.=debug
