--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -32,3 +32,6 @@ spring.cloud.config.uri=http://localhost:9101/
 #FileUpload
 spring.servlet.multipart.max-file-size=150MB
 spring.servlet.multipart.max-request-size=150MB
+
+#LOGGING
+logging.level.=debug
