--- a/kiidlibrary-junit.properties
+++ b/kiidlibrary-junit.properties
@@ -34,4 +34,4 @@ spring.servlet.multipart.max-file-size=150MB
 spring.servlet.multipart.max-request-size=150MB
 
 #LOGGING
-debug=true
+log4j.logger.com.example=debug
