--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -34,4 +34,7 @@ spring.servlet.multipart.max-file-size=150MB
 spring.servlet.multipart.max-request-size=150MB
 
 #LOGGING
-log4j.logger.com.example=debug
+log4j.logger.deng=INFO
+log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
+log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
+log4j.appender.STDOUT.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
