--- a/kiidlibrary.properties
+++ b/kiidlibrary.properties
@@ -19,22 +19,16 @@ tesseract.dataPath=../KiidLibraryGlobal/KiidLibrary/src/main/resources/tessdata
 
 # App config
 #server.port=9090
-#eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
+eureka.client.serviceUrl.defaultZone: http://192.168.1.16:9102/eureka
+#eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka
 #eureka.instance.hostname= ${SERVICE_NAME}.${NAMESPACE_NAME}
 #configuration
 my-configs.maxitems = 6
 eureka.instance.prefer-ip-address=true
 
-spring.cloud.config.uri=http://localhost:9101/
-#spring.cloud.config.uri=http://192.168.1.16:9101/
+#spring.cloud.config.uri=http://localhost:9101/
+spring.cloud.config.uri=http://192.168.1.16:9101/
 
 #FileUpload
 spring.servlet.multipart.max-file-size=150MB
 spring.servlet.multipart.max-request-size=150MB
-
-#LOGGING
-log4j.logger.deng=INFO
-log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
-log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
