--- a/worker.properties
+++ b/worker.properties
@@ -41,4 +41,4 @@ spring.rabbitmq.host=192.168.1.16
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-spring.rabbitmq.virtual-host=/
+#spring.rabbitmq.virtual-host=/
