--- a/worker.properties
+++ b/worker.properties
@@ -42,4 +42,4 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 #spring.rabbitmq.virtual-host=/
-spring.rabbitmq.template.default-receive-queue=task_queue
+spring.rabbitmq.template.default-receive-queue="task_queue"
