--- a/worker.properties
+++ b/worker.properties
@@ -38,8 +38,8 @@ spring.zipkin.base-url=http://192.168.1.16:9411
 
 #RABBITMQ
 spring.rabbitmq.host=192.168.1.16
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 #spring.rabbitmq.virtual-host=/
-spring.rabbitmq.template.default-receive-queue="task_queue"
+#spring.rabbitmq.template.default-receive-queue="task_queue"
