--- a/worker.properties
+++ b/worker.properties
@@ -37,7 +37,7 @@ spring.servlet.multipart.max-request-size=150MB
 spring.zipkin.base-url=http://192.168.1.16:9411
 
 #RABBITMQ
-spring.rabbitmq.host=192.168.1.16
+#spring.rabbitmq.host=192.168.1.16
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
